--- a/css/styles.css
+++ b/css/styles.css
@@ -418,6 +418,12 @@ body{
     margin-bottom: 15px;
   }
 }
+
+@media(max-width: 540px){
+  .form-item.split > div{
+    flex-basis: 100%;
+  }
+}
 .form-item.split > *:first-child{
   flex-grow: 1;
   position: relative;
