--- a/css/styles.css
+++ b/css/styles.css
@@ -238,8 +238,9 @@ body{
 .card{
   background: #fff;
   border-radius: 6px;
-  /* box-shadow: 0px 0px 14px 3px rgb(197, 197, 197); */
-  box-shadow: 0 1px 4px 1px rgba(0,0,0,.14);
+  /* box-shadow: 0 1px 4px 1px rgba(0,0,0,.14); */
+  box-shadow: 2px 3px 6px rgba(0,0,0,0.25);
+  border: 1px solid #e3e3e3;
   padding: 15px;
   margin: 5px;
   position: relative;
